--- a/Hotlinks.html
+++ b/Hotlinks.html
@@ -72,6 +72,10 @@
           <span class="description"> - - - Search old websites via their gifs!!</span>
         </li>
         <li>
+          <a href="https://gifcities.org" target="_blank">https://gifcities.org/gram/</a>
+          <span class="description"> - - - Cool gifcity feature u shouldn't ignore!!</span>
+        </li>
+        <li>
           <a href="https://www.virtuagirl.net" target="_blank">https://virtuagirl.net</a>
           <span class="description"> - - - The siren-call of Cyberia</span>
         </li>
@@ -148,7 +152,8 @@
     "https://psfla.net",
     "https://itsjeremy.art/",
     "https://www.virtuagirl.net",
-    "https://www.sbnation.com/a/17776-football"
+    "https://www.sbnation.com/a/17776-football",
+    "https://gifcities.org/gram/"
   ];
 
   document.getElementById('randomBtn').addEventListener('click', () => {
