--- a/Hotlinks.html
+++ b/Hotlinks.html
@@ -72,7 +72,7 @@
           <span class="description"> - - - Search old websites via their gifs!!</span>
         </li>
         <li>
-          <a href="https://gifcities.org" target="_blank">https://gifcities.org/gram/</a>
+          <a href="https://gifcities.org/gram/" target="_blank">https://gifcities.org/gram/</a>
           <span class="description"> - - - Cool gifcity feature u shouldn't ignore!!</span>
         </li>
         <li>
