--- a/Hotlinks.html
+++ b/Hotlinks.html
@@ -112,6 +112,10 @@
           <span class="description"> - - - The first animation software I played with</span>
         </li>
         <li>
+          <a href="https://hasthelargehadroncolliderdestroyedtheworldyet.com" target="_blank">Has CERN destroyed the world yet?</a>
+          <span class="description"> - - - It's a legit question</span>
+        </li>
+        <li>
           <a href="https://theuselessweb.com" target="_blank">https://theuselessweb.com</a>
           <span class="description"> - - - For even MORE WEBSITES</span>
         </li>
@@ -153,7 +157,8 @@
     "https://itsjeremy.art/",
     "https://www.virtuagirl.net",
     "https://www.sbnation.com/a/17776-football",
-    "https://gifcities.org/gram/"
+    "https://gifcities.org/gram/",
+    "https://hasthelargehadroncolliderdestroyedtheworldyet.com"
   ];
 
   document.getElementById('randomBtn').addEventListener('click', () => {
