--- a/TESTING/index.html
+++ b/TESTING/index.html
@@ -20,8 +20,8 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Vicbartends.com">
     <link rel="canonical" href="https://vicbartends.com/">
-    <meta property="og:image" content="https://vicbartends.com/assets/icon.png"/>
-    <meta property="twitter:image" content="https://vicbartends.com/assets/icon.png"/>
+    <meta property="og:image" content="https://vicbartends.com/TESTING/assets/icon.png"/>
+    <meta property="twitter:image" content="https://vicbartends.com/TESTING/assets/icon.png"/>
     <meta name="twitter:description" content="Welcome to Vicbartends.com! Have a drink and check out MaxIsDreaming's very silly website!">
     <script type="application/ld+json">
     {
@@ -30,7 +30,7 @@
       "name": "Vicbartends.com",
       "url": "https://vicbartends.com",
       "description": "Welcome to Vicbartends.com! Have a drink and check out MaxIsDreaming's very silly website!",
-      "image": "https://vicbartends.com/assets/icon.png",
+      "image": "https://vicbartends.com/TESTING/assets/icon.png",
       "author": {
         "@type": "Person",
         "name": "Max_is_Dreaming"
@@ -787,5 +787,6 @@ function startMenuLogic() {
     chatclosed = false
   });
 </script>
+
 
 </html>
