--- a/TESTING/My_Art.html
+++ b/TESTING/My_Art.html
@@ -20,8 +20,8 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Max_is_Dreaming's Art!">
   <link rel="canonical" href="https://vicbartends.com/My_Art"> <!--Figure This Out -->
-  <meta property="og:image" content="https://vicbartends.com/assets/icon.png" />
-  <meta property="twitter:image" content="https://vicbartends.com/assets/icon.png" />
+  <meta property="og:image" content="https://vicbartends.com/TESTING/assets/icon.png" />
+  <meta property="twitter:image" content="https://vicbartends.com/TESTING/assets/icon.png" />
   <meta name="twitter:description"
     content="Many things made by Max_is_Dreaming running on a totally real, totally functional, VicBartends Operating System!">
   <script type="application/ld+json">
@@ -31,7 +31,7 @@
       "name": "Vicbartends.com",
       "url": "https://vicbartends.com/??", <!--Figure This Out -->
       "description": "The many things drawn by Max_is_Dreaming running on a totally real, totally functional, VicBartends Operating System!",
-      "image": "https://vicbartends.com/assets/icon.png",
+      "image": "https://vicbartends.com/TESTING/assets/icon.png",
       "author": {
         "@type": "Person",
         "name": "Max_is_Dreaming"
@@ -2271,5 +2271,6 @@ function wakeUp() {
     return moves;
   }
 </script>
+
 
 </html>
