--- a/TESTING/My_Art.html
+++ b/TESTING/My_Art.html
@@ -55,16 +55,16 @@
   <link href="maxisdreaming@vicbartends.com" rel="me">
   <link href="https://github.com/FeedMeBella" rel="me">
 
-  <link rel="preload" href="sounds/bootsequence.mp3" as="audio">
-  <link rel="preload" href="/font/amiga-topaz.woff2" as="font" type="font/woff2">
+  <link rel="preload" href="./sounds/bootsequence.mp3" as="audio">
+  <link rel="preload" href="./font/amiga-topaz.woff2" as="font" type="font/woff2">
 </head>
 
 <body>
-  <audio id="BootUp" src="sounds/bootsequence.mp3" preload="auto"></audio>
-  <audio id="BootUpLoop" src="sounds/bootsequenceloop.mp3" preload="auto"></audio>
-  <audio id="Beep" src="sounds/Beep.mp3" preload="auto"></audio>
-  <audio id="Windows" src="sounds/windows.mp3" preload="auto"></audio>
-  <audio id="woowee" src="sounds/woowee.mp3" preload="auto"></audio>
+  <audio id="BootUp" src="./sounds/bootsequence.mp3" preload="auto"></audio>
+  <audio id="BootUpLoop" src="./sounds/bootsequenceloop.mp3" preload="auto"></audio>
+  <audio id="Beep" src="./sounds/Beep.mp3" preload="auto"></audio>
+  <audio id="Windows" src="./sounds/windows.mp3" preload="auto"></audio>
+  <audio id="woowee" src="./sounds/woowee.mp3" preload="auto"></audio>
 
   <!-- Intro --> 
   <div class="Switch">
@@ -2274,3 +2274,4 @@ function wakeUp() {
 
 
 </html>
+
